<resources>
    <string name="app_name">AndroidPath</string>
    <string name="action_settings2">setting</string>
    <string name="hello_world">helloword</string>
    <!--42-->
    <string name="spinner_title">请选择职业</string>
    <string name="layoutdemo2">layoutdemo2</string>
    <string name="buttonselectordemo3">buttonselectordemo3</string>
    <string name="buttontestactivity31">buttontestactivity31</string>
    <string name="edittextdemo32">edittextdemo32</string>
    <string name="imageviewtest33">imageviewTest33</string>
    <string name="viewtest34">viewTest34</string>
    <string name="handview">handview</string>
    <string name="buttonbgcolor40">buttonbgcolor40</string>
    <string name="checkradio41">checkRadio41</string>
    <string name="spinnerdemo42">spinnerDemo42</string>
    <string name="spinnerdemo43">spinnerDemo43</string>
    <string name="spinnersimpleadapter44">spinnerSimpleAdapter44</string>
    <string name="activityjump50">activityJump50</string>
    <string name="activitypassvalue50">activityPassValue50</string>
    <string name="autoCompleteText51">autoCompleteText51</string>
    <string name="spinnerlink52">spinnerLink52</string>
    <string name="activitypassvalue55">activityPassValue55</string>
    <string name="getresult60">getResult60</string>
    <string name="taskdemo61">taskDemo61</string>
    <string name="aysncdemoone70">AysncDemoOne70</string>
    <string name="aysncdemotwo71">AysncDemoTwo71</string>
    <string name="aysncgetimage72">AysncGetImage72</string>
    <string name="aysncgetprogress73">AysncGetProgress73</string>
    <string name="activityflagdemo74">ActivityFlagDemo74</string>
    <string name="imageviewdeal75">ImageViewDeal75</string>
    <string name="activitysaveinstance76">ActivitySaveInstance76</string>
    <string name="listviewadapter80">listViewAdapter80</string>
    <string name="listviewadddata81">listViewAddData81</string>
    <string name="lvsimpleadapter82">LVSimpleAdapter82</string>
    <string name="lvdataparse83">LVDataParse83</string>
    <string name="listviewjoke90">ListViewJoke90</string>
    <string name="baseadapterpack100">BaseAdapterPack100</string>
    <string name="lvexpandable101">LvExpandable101</string>
    <string name="gradview102">GradView102</string>
    <string name="lvemptyview103">LVEmptyView103</string>
    <string name="aleatdialog110">AleatDialog110</string>
    <string name="contextmenu111">ContextMenu111</string>
    <string name="notification112">Notification112</string>
    <string name="optionmenu113">OptionMenu113</string>
    <string name="popupmenu114">PopupMenu114</string>
    <string name="submenu115">SubMenu115</string>
    <string name="toastdemo116">ToastDemo116</string>
    <string name="dymicaddmenu117">DymicAddMenu117</string>
    <string name="dialogfragment120">DialogFragment120</string>
    <string name="staticfragment121">StaticFragment121</string>
    <string name="dynicaddfragment123">DynicAddFragment123</string>
    <string name="passvaluefragement122">PassValueFragement122</string>
    <string name="radiofragment124">RadioFragment124</string>
    <string name="sharedproference130">SharedProference130</string>
    <string name="filestorge131">FileStorge131</string>
    <string name="filestorgetwo132">FileStorgeTwo132</string>
    <string name="sqlDemo140">SqlDemo140</string>
    <string name="sqlclientone150">SqlClientOne150</string>
    <string name="sqlserver151">SqlServer151</string>
    <string name="sqlserverone151">SqlServerOne151</string>
    <string name="sqlclienttwo152">SqlClientTwo152</string>
    <string name="sqlservertwo153">SqlServerTwo153</string>
    <string name="sqldemo154">SqlDemo154</string>
    <string name="simpleCursorAdapter155">SimpleCursorAdapter155</string>
    <string name="contentobserverSms160">ContentobserverSms160</string>
    <string name="contentResolverContacts161">ContentResolverContacts161</string>
    <string name="loadmanager170">LoadManager170</string>
    <string name="loadmanagercontact171">LoadManagerContact171</string>
    <string name="loadImage172">LoadImage172</string>
    <string name="handlerimage180">HandlerImage180</string>
    <string name="HandlerCycleImage181">HandlerCycleImage180</string>
    <string name="HandlerLightCycle182">HandlerLightCycle182</string>
    <string name="handlerupdateui183">HandlerUpdateUI183</string>
    <string name="HandlerLooper184">HandlerLooper184</string>
    <string name="acitionbardemo190">AcitionBarDemo190</string>
    <string name="acitionbarprovider191">AcitionBarProvider191</string>
    <string name="AcitionBarTab192">AcitionBarTab192</string>
    <string name="acitionbarlist193">AcitionBarList193</string>
    <string name="acitionbarcustomview194">AcitionBarCustomView194</string>
    <string name="asstes195">Asstes195</string>
    <string name="textViewViewPager210">TextViewViewPager210</string>
    <string name="chabaike211">Chabaike211</string>
    <string name="HeadViewPager212">HeadViewPager212</string>
    <string name="webview213">WebView213</string>
    <string name="FragmentViewPager214">FragmentViewPager214</string>
    <string name="actionbarviewpager215">ActionBarViewPager215</string>
    <string name="tabviewpager220">TabViewPager220</string>
    <string name="TabViewPagerTwo221">TabViewPagerTwo221</string>
    <string name="chabaike216">ChaBaiKe216</string>
    <string name="BroadCastReceiver230">BroadCastReceiver230</string>
    <string name="SendBroadCast231">SendBroadCast231</string>
    <string name="localbroadcastone232">LocalBroadCastOne232</string>
    <string name="LocalBroadCastTwo233">LocalBroadCastTwo233</string>
    <string name="BroadCastServer234">BroadCastServer234</string>
    <string name="BroadCastClient235">BroadCastClient235</string>
    <string name="ChaBaiKe240">ChaBaiKe240</string>
    <string name="servicedemo241">ServiceDemo241</string>
    <string name="LocalBroadCastService242">LocalBroadCastService242</string>
    <string name="MeidaService243">MeidaService243</string>
    <string name="intentservice244">IntentService244</string>
    <string name="StickService245">StickService245</string>
    <string name="MeidaService246">MeidaService246</string>
    <string name="IntentService248">IntentService248</string>
    <string name="stickservice247">StickService247</string>
    <string name="surfaceviewbird">SurfaceViewBird</string>
    <string name="buttonSelector">buttonSelector</string>
    <string name="button">button</string>
    <string name="imagebutton">imagebutton</string>
    <string name="languagesettings">languageSettings</string>
    <string name="tvchinese">tvChinese</string>
    <string name="tvenglish">tvEnglish</string>
    <string name="GLSurfaceView">GLSurfaceView</string>
    <string name="layoutbutton">layoutButton</string>
    <string name="activityLiveCycle">activityLiveCycle</string>
    <string name="asyncdemo">asyncDemo</string>
    <string name="layoutbutton1">layoutButton1</string>
    <string name="activitylivecycle2">activityLiveCycle2</string>
    <string name="asyncdemo3">asyncDemo3</string>
    <string name="listviewactivity4">listViewActivity4</string>
    <string name="alertactivity5">alertActivity5</string>
    <string name="fragmentdemo6">fragmentDemo6</string>
    <string name="storgedemo7">storgeDemo7</string>
    <string name="handlerdemo8">handlerDemo8</string>
    <string name="viewPagerDemo9">viewPagerDemo9</string>
    <string name="broadcastdemo10">broadcastDemo10</string>

    <string-array name="job_array">
        <item>程序员</item>
        <item>公务员</item>
        <item>架构师</item>
        <item>律师</item>
        <item>医生</item>
        <item>厨师</item>
    </string-array>

    <string-array name="menu_array">
        <item>鱼香肉丝</item>
        <item>红烧肉</item>
        <item>佛跳墙</item>
        <item>油闷大虾</item>
        <item>清蒸鲈鱼</item>
        <item>大闸蟹</item>
    </string-array>

</resources>
