<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.MainActivity">

    <TextView
        android:id="@+id/layoutdemo2"
        style="@style/tvStyle"
        android:text="@string/layoutdemo2" />

    <TextView
        android:id="@+id/buttonselectordemo3"
        style="@style/tvStyle"
        android:text="@string/buttonselectordemo3" />

    <TextView
        android:id="@+id/buttontestactivity31"
        style="@style/tvStyle"
        android:text="@string/buttontestactivity31" />

    <TextView
        android:id="@+id/edittextdemo32"
        style="@style/tvStyle"
        android:text="@string/edittextdemo32" />

    <TextView
        android:id="@+id/imageviewTest33"
        style="@style/tvStyle"
        android:text="@string/imageviewtest33" />

    <TextView
        android:id="@+id/viewTest34"
        style="@style/tvStyle"
        android:text="@string/viewtest34" />

    <TextView
        android:id="@+id/handview"
        style="@style/tvStyle"
        android:text="@string/handview" />

    <TextView
        android:id="@+id/buttonbgcolor40"
        style="@style/tvStyle"
        android:text="@string/buttonbgcolor40" />

    <TextView
        android:id="@+id/checkRadio41"
        style="@style/tvStyle"
        android:text="@string/checkradio41" />

    <TextView
        android:id="@+id/spinnerDemo42"
        style="@style/tvStyle"
        android:text="@string/spinnerdemo42" />

    <TextView
        android:id="@+id/spinnerDemo43"
        style="@style/tvStyle"
        android:text="@string/spinnerdemo43" />

    <TextView
        android:id="@+id/spinnerSimpleAdapter44"
        style="@style/tvStyle"
        android:text="@string/spinnersimpleadapter44" />

    <TextView
        android:id="@+id/activityJump50"
        style="@style/tvStyle"
        android:text="@string/activityjump50" />

    <TextView
        android:id="@+id/activityPassValue50"
        style="@style/tvStyle"
        android:text="@string/activitypassvalue50" />

    <TextView
        android:id="@+id/autoCompleteText51"
        style="@style/tvStyle"
        android:text="@string/autoCompleteText51" />
    <TextView
        android:id="@+id/spinnerLink52"
        style="@style/tvStyle"
        android:text="@string/spinnerlink52" />
    <TextView
        android:id="@+id/activityPassValue55"
        style="@style/tvStyle"
        android:text="@string/activitypassvalue55" />
</LinearLayout>
