<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/layoutButton1"
                        style="@style/tvStyle"
                        android:text="@string/layoutbutton1" />


                </RelativeLayout>


                <TextView
                    android:id="@+id/activityLiveCycle2"
                    style="@style/tvStyle"
                    android:text="@string/activitylivecycle2" />

                <TextView
                    android:id="@+id/asyncDemo3"
                    style="@style/tvStyle"
                    android:text="@string/asyncdemo3" />

                <TextView
                    android:id="@+id/listViewActivity4"
                    style="@style/tvStyle"
                    android:text="@string/listviewactivity4" />

                <TextView
                    android:id="@+id/alertActivity5"
                    style="@style/tvStyle"
                    android:text="@string/alertactivity5" />

                <TextView
                    android:id="@+id/fragmentDemo6"
                    style="@style/tvStyle"
                    android:text="@string/fragmentdemo6" />

                <TextView
                    android:id="@+id/storgeDemo7"
                    style="@style/tvStyle"
                    android:text="@string/storgedemo7" />

                <TextView
                    android:id="@+id/handlerDemo8"
                    style="@style/tvStyle"
                    android:text="@string/handlerdemo8" />

                <TextView
                    android:id="@+id/viewPagerDemo9"
                    style="@style/tvStyle"
                    android:text="@string/viewPagerDemo9" />

                <TextView
                    android:id="@+id/broadcastDemo10"
                    style="@style/tvStyle"
                    android:text="@string/broadcastdemo10" />

                <TextView
                    android:id="@+id/serviceDemo11"
                    style="@style/tvStyle"
                    android:text="@string/serviceDemo11" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/all_settings"
                    style="@style/tvStyle"
                    android:text="@string/Settings" />
                <TextView
                    android:id="@+id/architecture"
                    style="@style/tvStyle"
                    android:layout_alignParentEnd="true"
                    android:text="@string/architecture" />
                <TextView
                    android:id="@+id/view"
                    style="@style/tvStyle"
                    android:layout_alignParentEnd="true"
                    android:text="@string/view" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>